Fixed issue rendering navigation items on MS browser to be miss aligned

--- a/src/main.css
+++ b/src/main.css
@@ -79,19 +79,18 @@ li {
 }
 
 .nav-list-container {
-  display: flex;
   margin: 36px auto;
   padding: 0;
   position: relative;
+  text-align: center;
   text-transform: uppercase;
   top: 0px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
   z-index: 11;
 }
 
 .nav-list-container li {
+  display: inline;
   font-size: 1.25em;
   font-weight: 500;
   margin-left: 30px;
